--- a/index.html
+++ b/index.html
@@ -250,6 +250,8 @@
       </div>
     </section><!-- End Gallery Section -->
 
+    <div class='sk-ww-google-reviews' data-embed-id='25351654'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -259,11 +261,7 @@
         &copy; Copyright <strong><span>PhotoFolio</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
       </div>
     </div>
   </footer><!-- End Footer -->
