--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/EtruscanA-01.svg/347px-EtruscanA-01.svg"
+      href="https://upload.wikimedia.org/wikipedia/commons/thumb/8/86/EtruscanA-01.svg/347px-EtruscanA-01.svg.png"
     />
     <title>Akbar Odilov</title>
   </head>
