Update favicon links in HTML files

--- a/about.html
+++ b/about.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>Akbar Odilov</title>
-    <link
-      rel="icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Unicode_0x0041.svg/1200px-Unicode_0x0041.svg.png"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="./img/logo.png" type="image/x-icon" />
     <!-- meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
