--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Akbar Odilov</title>
     <link
       rel="icon"
-      href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Unicode_0x0041.svg/1200px-Unicode_0x0041.svg.png"
+      href="./img/logo.png"
       type="image/x-icon"
     />
     <!-- meta -->
