--- a/html/contact.html
+++ b/html/contact.html
@@ -27,7 +27,7 @@
           <div class="col-md-4 col-sm-5 col-xs-8">
             <div class="logo">
               <h1>
-                <a href="index.html"><b>Odilov's</b> blog</a>
+                <a href="/"><b>Odilov's</b> blog</a>
               </h1>
             </div>
           </div>
@@ -50,16 +50,16 @@
               >
                 <ul class="nav navbar-nav navbar-right">
                   <li class="cl-effect-11">
-                    <a href="index.html" data-hover="Home">Home</a>
+                    <a href="/home" data-hover="Home">Home</a>
                   </li>
                   <li class="cl-effect-11">
-                    <a href="full-width.html" data-hover="Blog">Blog</a>
+                    <a href="/blog" data-hover="Blog">Blog</a>
                   </li>
                   <li class="cl-effect-11">
-                    <a href="about.html" data-hover="About">About</a>
+                    <a href="/about" data-hover="About">About</a>
                   </li>
                   <li class="cl-effect-11">
-                    <a href="contact.html" data-hover="Contact">Contact</a>
+                    <a href="/contact" data-hover="Contact">Contact</a>
                   </li>
                 </ul>
               </div>
