--- a/full-width.html
+++ b/full-width.html
@@ -6,7 +6,22 @@
     <!-- meta -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Akbar Odilov - Blog" />
+    <meta property="og:url" content="https://www.akbar-odilov.uz/" />
+    <meta
+      property="og:image"
+      content="https://www.akbar-odilov.uz/img/logo.png"
+    />
+    <meta
+      property="og:description"
+      content="Hello! My name is Akbar Odilov. I'm a backend developer."
+    />
+    <meta
+      name="google-site-verification"
+      content="LkK66xxKoxbbYtDdmCoiSfO1_5_qpFPdb9O9Jh5zs2s"
+    />
+    <meta name="yandex-verification" content="c7d5fd95f2d8bdb9" />
     <!-- css -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/ionicons.min.css" />
