--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <meta name="description" content="Akbar Odilov Backend developer"/>
+    <meta name="keywords" content="Akbar Odilov, Backend developer, Fullstack developer, React, Node.js, Express.js, MongoDB, Mongoose, JavaScript, TypeScript, HTML, CSS, SASS, SCSS, Bootstrap, Ant Design, REST API, JWT, OAuth, Passport.js, Git, GitHub, Netlify, Vercel, Firebase, Docker, Postman"/>
+    <meta name="author" content="Akbar Odilov"/>
+    <meta name="robots" content="index, follow"/>
+    <meta name="googlebot" content="index, follow"/>
+    <meta name="google" content="nositelinkssearchbox"/>
+    <meta name="google" content="notranslate"/>
+    <meta name="google" content="nositelinkssearchbox"/>
+    <meta name="google" content="max-image-preview:large"/>
+    <meta name="google" content="max-snippet:-1"/>
+    <meta name="google" content="notranslate"/>
+    <meta property="og:title" content="Odilov's blog"/>
+    <meta property="og:description" content="Akbar Odilov Backend developer"/>
+    <meta property="og:image" content="./android-chrome-192x192.png"/>
+    <meta property="og:url" content="https://akbar-odilov.uz/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:site_name" content="Odilov's blog"/>
+    <meta property="og:locale" content="en_US"/>
+    <meta property="og:locale:alternate" content="uz_UZ"/>
+    <meta property="og:locale:alternate" content="ru_RU"/>
+    <link rel="apple-touch-icon" href="./android-chrome-192x192.png" />
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>Odilov's blog</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
